# Django_CICD

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  main.yml  prod.yml
api/: gunicorn_run.sh
api/account/: managers.py  models.py  serializers.py  urls.py  views.py
api/account/migrations/: 0001_initial.py  0002_usermedia.py  0003_alter_user_receive_message.py
api/api/: settings.py  urls.py
api/common/: models.py
api/mainapp/: admin.py  forms.py  models.py  urls.py  views.py
api/mainapp/migrations/: 0001_initial.py  0002_profile_date_modified.py  0003_profile_profile_pic.py  0004_post.py  0005_remove_profile_profile_pic_profile_profile_image.py  0006_post_likes.py  0007_post_loves.py  0008_profile_facebook_link_profile_instagram_link_and_more.py  0009_comment.py  0010_alter_comment_id.py  0011_alter_comment_options_post_post_image.py  0012_comment_comment_image.py  0013_preference.py  0014_userpreference_delete_preference.py  0015_alter_profile_date_modified.py
api/mainapp/templates/: base-login.html  base.html  edit_post.html  followers.html  follows.html  home.html  login.html  loginintro.html  logout.html  mobileMenu.html  navbar.html  new.html  newpost.html  post_comments.html  post_share.html  profile.html  profile_list.html  register.html  style.css  (+4 more)
api/twilioauth/: apps.py  models.py  urls.py  views.py
api/user_post/: apps.py  models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py  views.py
tests/: test_projecttest.py
(+3 files in other folders)
