[tool.poetry]
name = "ProjectTest"
version = "0.1.0"
description = ""
authors = ["parvezhossen <parvez@merchantbay.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
