[tool.poetry]
name = "lovetamin"
version = "0.1.0"
description = ""
authors = ["Parvez Hossen"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
